--- a/frontend/src/i18n/tr/tr.json
+++ b/frontend/src/i18n/tr/tr.json
@@ -28,7 +28,7 @@
   "News": "HABERLER",
   "Career": "KARİYER",
   "GroupCompany": "GRUP ŞİRKETLERİ",
-  "CopyRight": "© Copyright 2019, Ordulu. Tüm hakları saklıdır.",
+  "CopyRight": "© Copyright 2022, Ordulu. Tüm hakları saklıdır.",
   "MailTo": "bilgi@ordulu.com",
   "KVKK": "Kişisel Verilerin Korunması ve İşlenmesi Politikası",
   "Address": "ODTÜ Teknokent Bilişim İnovasyon Merkezi,\nMustafa Kemal Mahallesi, No: 280/G, Çankaya, Ankara, Türkiye",
@@ -124,15 +124,14 @@
   "GamText4": "Güvenlik ve Sızma Engelleme",
   "GamText5": "Olay Yönetimi",
   "GamText6": "Kolay ve Etkin Sistem Yönetimi",
-  "GamMainText": "Hava ve kara araçların da, operasyon faaliyetlerinden önce yetkili personel tarafından kullanıcı bazlı izin verilerek bu sürecin yönetimini kullanıcı dostu arayüzü sayesinde hızlı bir şekilde gerçekleştirilebilmektedir.",
+  "GamMainText": "İstihbarat, keşif ve gözetleme faaliyetleri yürüten hava ve kara araçlarından alınan anlık görüntülerin farklı çözünürlük seçeneği ile operasyonla ilgili kullanıcılara iletilmesini sağlar.",
   "UlakText1": "Genel ve Özel Bulut",
   "UlakText2": "Sesli ve Görüntülü Konuşma",
   "UlakText3": "Anlık Mesajlaşma",
   "UlakText4": "Milli Mühendislik",
   "UlakText5": "Konferans Görüşme",
   "UlakText6": "Güvenli Mesajlaşma",
-  "UlakMainText": "ULAK.IM yerli ve milli kaynaklar ile geliştirilen anlık mesajlaşma uygulamasıdır. Bilgi gizliliği ve güvenliğinin ön planda olduğu çağımızda,yabancı menşeli uygulamalara alternatif olarak geliştirilen ULAK.IM bilginin ülke dışına çıkmasını engelleyerek iletişim güvenliğini ve gizliliğini sağlamaktadır.",
-  "Podcast1": "#T3PODCAST 17. BÖLÜM:",
+  "UlakMainText": "Ulak.im yerli ve milli kaynaklar ile geliştirilen anlık mesajlaşma uygulamasıdır. Yabancı menşeili uygulamalara alternatif olarak geliştirilen Ulak.im bilginin ülke dışına çıkmasını engelleyerek verimli bir iletişimi güvenli olarak sağlamaktadır.",  ",Podcast1": "#T3PODCAST 17. BÖLÜM:",
   "Podcast2": "YAPAY ZEKANIN CAN SUYU: BÜYÜK VERİ",
   "Podcast3": "NİZAMEDDİN ORDULU",
   "jobTitle": "Açık Pozisyonlar",
@@ -184,11 +183,15 @@
   "About": "HAKKIMIZDA",
   "About2": "Hakkımızda",
   "WhoAreWe": "Biz Kimiz?" ,
-  "WhoAreWe2": "Ordulu Bilgi Teknolojileri Anonim Şirketi müşterilerinin hayatını kolaylaştıracak, zenginleştirecek, verimlilik ve üretkenliğini arttıracak ürün ve çözümlerin sağlanması için ülkemizin savunma sanayii alanında ihtiyaçlarını karşılamak amacıyla milli çözümler üretmek üzere Ankara’da kurulmuştur.",
-  "WhoAreWe3": "Müşteri odaklı özel yazılım geliştirme hizmetleri ile birlikte etkili teknik sistem/yazılım yaklaşımları ve uzman/deneyimli kadrosu ile güvenli haberleşme, görüntü aktarma merkezi sistemleri , görüntü İşleme sistemleri ve büyük veri alanlarında yürütmekte olduğu Ar-Ge çalışmaları ile kısa sürede hayata geçirdiği ulusal projelerle yetkinliğini kanıtlamıştır.",
+  "WhoAreWe2": "Ordulu Bilgi Teknolojileri Anonim Şirketi, ülkemizin savunma sanayi alanında ihtiyaçlarını karşılamak amacıyla milli çözümler üretmek üzere Ankara’da kurulmuştur.",
+  "WhoAreWe3": "Müşteri odaklı özel yazılım geliştirme hizmetleri, etkili teknik sistem/yazılım yaklaşımları ve uzman/deneyimli kadrosu ile Güvenli Haberleşme, Görüntü Aktarma Merkezi Sistemleri , Görüntü İşleme Sistemleri ve Büyük Veri alanlarında yürütmekte olduğu Ar-Ge çalışmaları ile kısa sürede hayata geçirdiği ulusal projelerle yetkinliğini kanıtlamıştır.",
   "Owners": "Kurucularımız",
   "Manager": "Genel Müdür",
-  "ManagerText": "Ordulu Bilgi Teknolojileri Genel Müdürü Nizameddin Haşim Ordulu 2007 yılında ‘‘Massachusetts Institute of Technology (MIT)’’ Bilgisayar Mühendisliği ve Matematik bölümünden mezun oldu.\n\n2010 yılında İse MIT ‘de Kriptografi ve Veri tabanları yüksek lisansını (MBA) tamamladı.\n\n2010-2014 yıllarında Silikon vadisinde Google ve Facebook firmalarında çalıştı.\n\n2015 yılının sonunda ise Ankara’da Savunma Sanayii alanında çalışan Ordulu Bilgi Teknolojileri firmasını kurmuştur.\nGörüntü İşleme, yapay zeka ve güvenli mesajlaşma protokolleri alanında çalışmalarını sürdürmektedir.",
+  "ManagerText": "Ordulu Bilgi Teknolojileri Genel Müdürü Nizameddin Haşim Ordulu, 2007 yılında Massachusetts Institute of Technology (MIT) Bilgisayar Mühendisliği ve Matematik bölümünden mezun oldu.",
+  "ManagerText2": "2010 yılında ise MIT‘de Kriptografi ve Veri Tabanları alanında yüksek lisansını tamamladı.",
+  "ManagerText3": "2010-2014 yıllarında Silikon Vadisi'nde, Google ve Facebook firmalarında çalıştı.",
+  "ManagerText4": "2015 yılının sonunda ise Ankara’da, Savunma Sanayi alanında faliyet göstermekte olan Ordulu Bilgi Teknolojileri firmasını kurdu.",
+  "ManagerText5": "Görüntü İşleme, Yapay Zeka ve Güvenli Mesajlaşma protokolleri alanında çalışmalarını sürdürmektedir.",
   "InfoSecurity": "Bilgi Güvenliği Politikası",
   "EntegreManagement": "Entegre Yönetim Sistemi Politikası",
   "KVKK3": "Kişisel Veri Kapsamında Başvuru Formu",
