--- a/frontend/src/i18n/en/en.json
+++ b/frontend/src/i18n/en/en.json
@@ -196,5 +196,7 @@
   "ManagerText3": "Worked at Google and Facebook companies in Silicon Valley between 2010-2014.",
   "ManagerText4": "At the end of 2015, he founded Ordulu Information Technologies company in Ankara, operating in the field of Defense Industry.",
   "ManagerText5": "Continues to work on Image Processing, Artificial Intelligence and Secure Messaging protocols.",
-  "OrduluBt": "Ordulu Information Technologies"
+  "OrduluBt": "Ordulu Information Technologies",
+  "KVKKCheck": "KVKK metnini onaylamanız gerekmektedir!"
+
 }
