--- a/frontend/src/i18n/tr/tr.json
+++ b/frontend/src/i18n/tr/tr.json
@@ -198,5 +198,6 @@
   "KVKK3": "Kişisel Veri Kapsamında Başvuru Formu",
   "infosecurity": "Bilgi Güvenliği Politikası",
   "entegre": "Entegre Yönetim Sistemi Politikası",
-  "OrduluBt": "ORDULU BİLGİ TEKNOLOJİLERİ"
+  "OrduluBt": "ORDULU BİLGİ TEKNOLOJİLERİ",
+  "KVKKCheck": "KVKK metnini onaylamanız gerekmektedir!"
 }
