Mail sender bug fix.

--- a/frontend/src/i18n/tr/tr.json
+++ b/frontend/src/i18n/tr/tr.json
@@ -31,7 +31,7 @@
   "CopyRight": "© Copyright 2022, Ordulu. Tüm hakları saklıdır.",
   "MailTo": "bilgi@ordulu.com",
   "KVKK": "Kişisel Verilerin Korunması ve İşlenmesi Politikası",
-  "Address": "ÇAMLICA MAH. METEHAN SOK. AA1 BLOK, 06200 Yenimahalle/Ankara",
+  "Address": "<div>Çamlıca Mah. Metehan Sok.</br> AA1 Blok, 06200 Yenimahalle/Ankara</div>",
   "DefenceText": "Savunma Sanayi alanında İnsansız Hava Araçları için özgün çözümler geliştirilen bir firma olan Ordulu Bilgi Teknolojilerinde, alanlarında uzman, yetkin ve dinamik mühendislerin arasına siz de katılabilirsiniz.",
   "Life": "Yaşam",
   "CareerText": "Kariyer",
